--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -119,9 +119,11 @@ button[disabled] {
   /* Modal Content/Box */
   .modal-content {
     background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    margin: 1% auto auto;
     border: 1px solid #888;
-    width: 30%; /* Could be more or less, depending on screen size */
+    width: 30%;
+    max-height: calc(120vh - 200px);
+    overflow-y: auto;
   }
   
   /* The Close Button (x) */
